Closed Bug 1138187 Opened 10 years ago Closed 2 years ago

dtoa.c:251 #define CONST const pollutes environment and breaks Unified_js_src7.cpp

Categories

(Firefox Build System :: General, defect)

36 Branch
x86_64
Linux
defect

Tracking

(firefox112 fixed)

RESOLVED FIXED
112 Branch
Tracking Status
firefox112 --- fixed

People

(Reporter: axs, Assigned: sergesanspaille)

Details

Attachments

(2 files)

dtoa.c is included in jsdtoa.cpp, which is included in Unified_js_src7.cpp. When #ifundef's match up, line 251 sets #define CONST const ; this messes up the 'Kind' enum, which b0rks a whole slew of other things. A simple fix seems to be to detect whether or not CONST is defined within dtoa.c and then #undef it at the end of dtoa.c to ensure the #include dtoa.c doesn't mess up the rest of Unified_js_src7.cpp This issue didn't show up until I tried building firefox-36 with --disable-ion (and fixed the none-jit issues), but it could have other implications later if dtoa.c is #include'd in future codebases without being careful.
Product: Core → Firefox Build System
Severity: normal → S3
Assignee: nobody → sguelton
Status: NEW → ASSIGNED
Pushed by ctuns@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/1ba4f393b983 Remove unused CONST macro definition r=sfink
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
Summary: dtoa.c:251 #define CONST const pollutes environment and b0rks Unified_js_src7.cpp → dtoa.c:251 #define CONST const pollutes environment and breaks Unified_js_src7.cpp
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: