Bug 1138187 - Remove unused CONST macro definition r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D171310